--- a/bingo.html
+++ b/bingo.html
@@ -8,7 +8,10 @@
     <div class="container">
         <h1>Bingo</h1>
         <table id="matrixTable"></table>
-        <button id="startButton" onclick="startBingo()">Start Bingo</button>
+        <div class="buttonContainer">
+          <button id="randomizeButton" onclick="randomizeBingo()">Randomize</button>
+          <button id="startButton" onclick="startBingo()">Start Bingo</button>
+        </div>
     </div>
   <script src="scripts/bingo.js"></script>
 </body>
