--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
         <h1>Bingo</h1>
         <div class="bingoInput">
             <div class="input-row">
-            <input type="number" id="rows" placeholder="Zeilen">
-            <Text>X</Text>
-            <input type="number" id="columns" placeholder="Spalten">
+              <input type="number" id="rows" placeholder="Zeilen">
+              <Text>X</Text>
+              <input type="number" id="columns" placeholder="Spalten">
             </div>
             <br>
+            <div class="input-row">
+              <label for="query">Game ID:</label>
+              <input type="text" id="query" placeholder="GameID here...">
+            </div>
             <button onclick="initField()">Init Field</button>
+            <br>
+            <button onclick="passiv()">I am a viewer</button>
         </div>
     </div>
   <script src="scripts/script.js"></script>
