Beta mit falschem gif

--- a/kutcher.html
+++ b/kutcher.html
@@ -11,19 +11,19 @@
 <body>
     <div class="row">
       <div class="text-container">
-        <text id="">sdhf iosdhfoihsd ofosdih fosdhof hosdih fosdi hfoisdh f</text>
+        <text id=""></text>
       </div>
       <div class="text-container">
-        <text id="">sdhf iosdhfoihsd ofosdih fosdhof hosdih fosdi hfoisdh f</text>
+        <text id=""></text>
       </div>
       <div class="text-container">
-        <text id="">sdhf iosdhfoihsd ofosdih fosdhof hosdih fosdi hfoisdh f</text>
+        <text id=""></text>
       </div>
       <div class="text-container">
-        <text id="">sdhf iosdhfoihsd ofosdih fosdhof hosdih fosdi hfoisdh f</text>
+        <text id=""></text>
       </div>
       <div class="text-container">
-        <text id="">sdhf iosdhfoihsd ofosdih fosdhof hosdih fosdi hfoisdh f</text>
+        <text id=""></text>
       </div>
       <div class="text-container">
         <text id=""></text>
