Beta big layout

--- a/stream.html
+++ b/stream.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>Bingo for Stream</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style/stream.css">
 </head>
 <body>
-    <div class="column">
+    <div class="row">
       <div class="text-container">
         <text id=""></text>
       </div>
@@ -36,6 +38,6 @@
         <text id=""></text>
       </div>
     </div>
-  <script src="scripts/stream.js"></script>
+  <script src="scripts/kutcher.js"></script>
 </body>
 </html>
