geiler Frank Zwinkerer

--- a/stream.html
+++ b/stream.html
@@ -38,6 +38,6 @@
         <text id=""></text>
       </div>
     </div>
-  <script src="scripts/kutcher.js"></script>
+  <script src="scripts/stream.js"></script>
 </body>
 </html>
