--- a/bingostats.html
+++ b/bingostats.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style/bingostats.css">
 </head>
 <body>
+  <text id="test"></text>
   <script src="scripts/bingostats.js"></script>
 </body>
 </html>
