bingo leaderboard now in cool

--- a/bingostats.html
+++ b/bingostats.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bingo for Stream</title>
+  <title>Bingo Leaderboard</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="style/bingostats.css">
 </head>
 <body>
-  <text id="test"></text>
+  <div class="centered">
+    <h1>Rosin Bingo Leaderboard</h1>
+    <div id="leaderboard"></div>
+  </div>
   <script src="scripts/bingostats.js"></script>
 </body>
 </html>
