--- a/bingoV2.html
+++ b/bingoV2.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style/bingoV2.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.3/dist/chart.umd.min.js"></script>
 </head>
 <body>
     <div id="inhalt">
