--- a/bingoV2.html
+++ b/bingoV2.html
@@ -12,10 +12,10 @@
 <body>
     <div id="inhalt">
         <div id="bingoControl">
-            <button class="controlButton">Start Voting</button>
-            <button class="controlButton">Clear Votes</button>
+            <button class="controlButton" onclick="startBingo()">Start Voting</button>
+            <button class="controlButton" onclick="clearBets()">Clear Votes</button>
             <div class="input-row">
-                <button class="controlButton">Stop Voting</button>
+                <button class="controlButton" onclick="stopBingo()">Stop Voting</button>
                 <input type="number" id="numOfBingos" placeholder="0">
             </div>
         </div>
