--- a/bingoV2.html
+++ b/bingoV2.html
@@ -12,7 +12,7 @@
 <body>
     <div id="inhalt">
         <div id="bingoControl">
-            <button class="controlButton" onclick="startBingo()">Start Voting</button>
+            <button class="controlButton" onclick="startBingoCommand()">Start Voting</button>
             <button class="controlButton" onclick="clearBets()">Clear Votes</button>
             <div class="input-row">
                 <button class="controlButton" onclick="stopBingo()">Stop Voting</button>
