--- a/kutcher.html
+++ b/kutcher.html
@@ -7,8 +7,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style/kutcher.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.3/dist/chart.umd.min.js"></script>
 </head>
 <body>
+    <div id="bingoBets">
+        <canvas id="myChart" width="600" height="600"></canvas>
+    </div>
     <div class="row">
       <div class="text-container">
         <text id=""></text>
