megaCounter in layout

--- a/bingoV2.html
+++ b/bingoV2.html
@@ -85,7 +85,7 @@
                     <textarea id=""></textarea>
                 </div>
             </div>
-            <button id="startButton" class="randomButton" onclick="startBingo()">Start Bingo</button>
+            <button id="startButton" onclick="startBingo()">Start Bingo</button>
         </div>
         <div id="bingoBets">
             <canvas id="myChart" width="600" height="600"></canvas>
