--- a/kutcher.html
+++ b/kutcher.html
@@ -13,33 +13,41 @@
     <div id="bingoBets">
         <canvas id="myChart" width="600" height="600"></canvas>
     </div>
-    <div class="row">
-      <div class="text-container">
-        <text id=""></text>
+    <div id="display">
+      <div id="counter">
+        <text>Mega Counter:</text>
+        <text id="megaCounter">0</text>
       </div>
-      <div class="text-container">
-        <text id=""></text>
+      <div class="row">
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
+        <div class="text-container">
+          <text class="displayText"></text>
+        </div>
       </div>
-      <div class="text-container">
-        <text id=""></text>
-      </div>
-      <div class="text-container">
-        <text id=""></text>
-      </div>
-      <div class="text-container">
-        <text id=""></text>
-      </div>
-      <div class="text-container">
-        <text id=""></text>
-      </div>
-      <div class="text-container">
-        <text id=""></text>
-      </div>
-      <div class="text-container">
-        <text id=""></text>
-      </div>
-      <div class="text-container">
-        <text id=""></text>
+      <div id="placeholder">
       </div>
     </div>
   <script src="scripts/kutcher.js"></script>
