--- a/bingoV2.html
+++ b/bingoV2.html
@@ -33,6 +33,25 @@
                 </div>
             </div>
             <button class="controlButton" onclick="reset()">Reset Counters</button>
+            <div id="helpContainer">
+                <text class="helpText">
+                    BUTTONS:<br>
+                    - "Random" um Bingos zu generieren<br>
+                    - "Start Bingo" um das Bingo zu starten während es gestartet ist "Init new Bingo" um ein neues zu generieren<br>
+                    - "Mega", "Zwinker" und "Reset Counters" um mitzuzählen<br>
+                    - "Start Voting", "Clear Votes" und "Wette auflösen" für den Bingo Bot falls Bingo Bot im Chat und Mod
+                </text>
+                <text class="helpText">
+                    SETUP:<br>
+                    - Schreibe "hide" oder "Philly" um ein Bingo zu verdecken<br>
+                    - Schreibe 0/Zahl um ein Mitzählbingo zu erstellen
+                </text>
+                <text class="helpText">
+                    WÄHREND DES BINGOS:<br>
+                    - Linksklick um ein Bingo zu erfüllen<br>
+                    - Falls das Bingo zum mitzählen ist, dann wird die Linke Zahl durch einen Linksklick erhöht
+                </text>
+            </div>
         </div>
         <div class="matrix">
             <div class="row">
