Frank redet mit gif

--- a/ai/Rosin.html
+++ b/ai/Rosin.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div id="frankDiv">
+
+    </div>
+    <button onclick="soos()">asdasdasdasdas</button>
     <script src="scripts/Rosin.js"></script>
 </body>
 
