--- a/QuizPoker/html/PokerController.html
+++ b/QuizPoker/html/PokerController.html
@@ -49,7 +49,7 @@
         <!-- Challenge-Div mit Beispieltext -->
         <div class="challenge">
             <h2>Challenge</h2>
-            <text>Lorem ipsum dolor sit amet, <br>
+            <text id="challengeText">Lorem ipsum dolor sit amet, <br>
                 consectetur adipiscing elit.</text>
         </div>
     </div>
