feat: change cards

--- a/QuizPoker/html/PokerTable.html
+++ b/QuizPoker/html/PokerTable.html
@@ -67,6 +67,10 @@
         </div>
     </div>
 
+    <div id="cardsInputDiv">
+        <input type="number" name="cards" id="cardsInput" value="0">
+    </div>
+
     <script src="../scripts/PokerTable.js"></script>
 </body>
 
