--- a/QuizPoker/html/PokerController.html
+++ b/QuizPoker/html/PokerController.html
@@ -32,9 +32,10 @@
         <!-- Einzelne Buttons -->
         <div class="column">
             <button onclick="nextQuestion()">Next Question</button>
+            <button onclick="startRound()">Start Round</button>
             <button onclick="sendWin()">Send Win</button>
             <button onclick="sendLose()">Send Lose</button>
-            <button onclick="quitGame()">quitGame</button>
+            <button onclick="quitGame()">Quit Game</button>
         </div>
 
         <!-- Question with tips -->
