--- a/QuizPoker/html/PokerTable.html
+++ b/QuizPoker/html/PokerTable.html
@@ -69,6 +69,7 @@
 
     <div id="cardsInputDiv">
         <input type="number" name="cards" id="cardsInput" value="0">
+        <!-- <p id="cardsText">42</p> -->
     </div>
 
     <script src="../scripts/PokerTable.js"></script>
