feat: pot and challenge infos

--- a/QuizPoker/html/PokerTable.html
+++ b/QuizPoker/html/PokerTable.html
@@ -21,6 +21,9 @@
             <div class="row">
                 <div class="placeholder" id="player2"></div>
                 <div class="bigBox">
+                    <div class="potInfos"> 
+                        <p id="challengeInfo"></p>
+                    </div>
                     <div class="question">
                         <h2>Question</h2>
                         <h3 id="questionLabel">Länder mit k</h3>
@@ -28,6 +31,10 @@
                         <p class="tip" id="questionTip2">Europa</p>
                         <p class="tip" id="questionTip3">Japan</p>
                     </div>
+                    <div class="potInfos">
+                        <p id="potInfo"></p>
+                    </div>
+                    
                     <!-- <div class="challenge">
                         <h2>Challenge</h2>
                         <text id="challengeText">Lorem ipsum dolor sit amet, <br>
@@ -68,7 +75,7 @@
     </div>
 
     <div id="cardsInputDiv">
-        <input type="number" name="cards" id="cardsInput" value="0">
+        <!-- <input type="number" name="cards" id="cardsInput" value="0"> -->
         <!-- <p id="cardsText">42</p> -->
     </div>
 
