feat: add timer label

--- a/QuizPoker/html/PokerTable.html
+++ b/QuizPoker/html/PokerTable.html
@@ -79,6 +79,10 @@
         <!-- <p id="cardsText">42</p> -->
     </div>
 
+    <div id="timerDiv">
+        <!-- <p id="timerText">42</p> -->
+    </div>
+
     <script src="../scripts/PokerTable.js"></script>
 </body>
 
