--- a/ai/Jeremy.html
+++ b/ai/Jeremy.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style/Rosin.css">
+    <link rel="stylesheet" href="style/Jeremy.css">
 </head>
 
 <body>
     <div id="frankDiv">
 
     </div>
-    <script src="scripts/Rosin.js"></script>
+    <script src="scripts/ai/Jeremy.js"></script>
 </body>
 
 </html>
