--- a/ai/Jeremy.html
+++ b/ai/Jeremy.html
@@ -14,7 +14,7 @@
     <div id="frankDiv">
 
     </div>
-    <script src="scripts/ai/Jeremy.js"></script>
+    <script src="scripts/Jeremy.js"></script>
 </body>
 
 </html>
