--- a/watchTwitch/watch.html
+++ b/watchTwitch/watch.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="watch.css">
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
 </head>
 
 <body>
@@ -28,7 +29,9 @@
     <div class="outer"></div>
     <div class="outer"></div>
     <div class="outer"></div>
-    <div class="outer"></div>
+    <div class="outer">
+        <button onclick="screenshotPlayer()">DRÜCK MICH FÜR SCREEN</button>
+    </div>
     <script src="watch.js"></script>
 </body>
 
