feat: add LOL scripts

--- a/league/html/EarlySeason.html
+++ b/league/html/EarlySeason.html
@@ -7,9 +7,20 @@
 </head>
 
 <body>
-    <p id="test"></p>
-    <div id="">
+    <div id="display">
+        <div id="V9">
+            <p class="TEAMELO" id="V9ELO">V9: 0 LP</p>
+            <div id="V9Player">
 
+            </div>
+        </div>
+        <p id="VS">VS.</p>
+        <div id="NNO">
+            <p class="TEAMELO" id="NNOELO">NNO: 0 LP</p>
+            <div id="NNOPlayer">
+
+            </div>
+        </div>
     </div>
     <script src="../scripts/EarlySeason.js"></script>
 </body>
