--- a/league/html/EarlySeason.html
+++ b/league/html/EarlySeason.html
@@ -3,23 +3,22 @@
 
 <head>
     <title>Early Season Race</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/EarlySeason.css">
 </head>
 
 <body>
     <div id="display">
         <div id="V9">
-            <p class="TEAMELO" id="V9ELO">V9: 0 LP</p>
-            <div id="V9Player">
-
-            </div>
+            <div id="V9Player"></div>
+            <p class="TEAMELO" id="V9ELO">V9 0 LP</p>
         </div>
         <p id="VS">VS.</p>
         <div id="NNO">
-            <p class="TEAMELO" id="NNOELO">NNO: 0 LP</p>
-            <div id="NNOPlayer">
-
-            </div>
+            <div id="NNOPlayer"></div>
+            <p class="TEAMELO" id="NNOELO">NNO 0 LP</p>
         </div>
     </div>
     <script src="../scripts/EarlySeason.js"></script>
