feat: add timer

--- a/league/html/EarlySeason.html
+++ b/league/html/EarlySeason.html
@@ -10,15 +10,18 @@
 </head>
 
 <body>
-    <div id="display">
-        <div id="V9">
-            <div id="V9Player"></div>
-            <p class="TEAMELO" id="V9ELO">V9 0 LP</p>
-        </div>
-        <p id="VS">VS.</p>
-        <div id="NNO">
-            <div id="NNOPlayer"></div>
-            <p class="TEAMELO" id="NNOELO">NNO 0 LP</p>
+    <div id="hihi">
+        <p id="timer">00:00:00</p>
+        <div id="display">
+            <div id="V9">
+                <div id="V9Player"></div>
+                <p class="TEAMELO" id="V9ELO">V9 0 LP</p>
+            </div>
+            <p id="VS">VS.</p>
+            <div id="NNO">
+                <div id="NNOPlayer"></div>
+                <p class="TEAMELO" id="NNOELO">NNO 0 LP</p>
+            </div>
         </div>
     </div>
     <script src="../scripts/EarlySeason.js"></script>
