feat: sort sizes

--- a/league/html/EloOverlay.html
+++ b/league/html/EloOverlay.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Early Season Race</title>
+    <title>Elo Overlay</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
