feat: add today LP gains

--- a/league/html/EloOverlay.html
+++ b/league/html/EloOverlay.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Elo Overlay</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style/EloOverlay.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../style/EloOverlay.css" />
+  </head>
 
-<body>
+  <body>
     <div id="hihi">
-        <div id="display">
-            <div id="Player"></div>
-        </div>
+      <div id="display">
+        <div id="Player"></div>
+      </div>
     </div>
     <script src="../scripts/EloOverlay.js"></script>
-</body>
-
+  </body>
 </html>
